Use jtreg modules tag