@@ -43,12 +43,11 @@ import jdk.internal.vm.annotation.NullRestricted;
  * @test
  * @key randomness
  * @summary Test value class calling convention optimizations.
- * @modules java.base/jdk.internal.value
  * @library /test/lib /
  * @requires (os.simpleArch == "x64" | os.simpleArch == "aarch64")
  * @enablePreview
- * @compile --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
- *          --add-exports java.base/jdk.internal.value=ALL-UNNAMED TestCallingConvention.java
+ * @modules java.base/jdk.internal.value
+ *          java.base/jdk.internal.vm.annotation
  * @run main/othervm/timeout=450 compiler.valhalla.inlinetypes.TestCallingConvention
  */
 
