@@ -42,8 +42,8 @@ import static compiler.valhalla.inlinetypes.InlineTypes.rL;
  * @library /test/lib /
  * @requires (os.simpleArch == "x64" | os.simpleArch == "aarch64")
  * @enablePreview
- * @compile --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
- *          --add-exports java.base/jdk.internal.value=ALL-UNNAMED TestCallingConventionC1.java
+ * @modules java.base/jdk.internal.value
+ *          java.base/jdk.internal.vm.annotation
  * @run main/othervm/timeout=300 compiler.valhalla.inlinetypes.TestCallingConventionC1
  */
 
