@@ -28,10 +28,8 @@
  * @summary Fix JVM crash at Unsafe_FinishPrivateBuffer
  * @library /test/lib
  * @enablePreview
- * @compile --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
- *          TestLarvalState.java
- * @run main/othervm --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
- *                   compiler.valhalla.inlinetypes.TestLarvalState
+ * @modules java.base/jdk.internal.misc
+ * @run main/othervm compiler.valhalla.inlinetypes.TestLarvalState
  */
 
 package compiler.valhalla.inlinetypes;
