@@ -42,13 +42,12 @@ import jdk.internal.vm.annotation.NullRestricted;
  * @test
  * @key randomness
  * @summary Test correct handling of value classes.
- * @modules java.base/jdk.internal.value
  * @library /test/lib /test/jdk/lib/testlibrary/bytecode /test/jdk/java/lang/invoke/common /
  * @requires (os.simpleArch == "x64" | os.simpleArch == "aarch64")
  * @enablePreview
+ * @modules java.base/jdk.internal.value
+ *          java.base/jdk.internal.vm.annotation
  * @build jdk.experimental.bytecode.BasicClassBuilder test.java.lang.invoke.lib.OldInstructionHelper
- * @compile --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
- *          --add-exports java.base/jdk.internal.value=ALL-UNNAMED TestValueClasses.java
  * @run main/othervm/timeout=300 compiler.valhalla.inlinetypes.TestValueClasses
  */
 
